--- a/config.json
+++ b/config.json
@@ -1,7 +1,11 @@
 {
+  "executeAsSudo": true,
+
   "letsEncryptPath": "/etc/letsencrypt",
   "nginxPath": "/etc/nginx",
 
   "bindAddress": "0.0.0.0",
-  "socketPort": 5600
+  "socketPort": 5600,
+
+  "upstream": "http://flip"
 }
